@@ -33,6 +33,8 @@ Version 1.3.13+svn:
      (bug #7252)
    * it is now possible to play [sound] repeatedly using a "repeat" attribute
    * Added boolean variable disallow_observers to side defination
+   * Random factions can be defined on a subset of the non-random faction
+    (FR #10600)
  * miscellaneous and bug fixes:
    * set the default resistance to 100 (no resistance) instead of 0 (immune)
      (bug #10661)
